tests/typing/success/0150-formula-modty-binding.ec
module type I = {
}.

lemma L : forall (M <: I), true.
proof -strict.
 intros M;smt.
qed.
